All auth apis taken care
