# src/main/java/com/reftech/backend/anaservice/delegate/AuthApiDelegateImpl.java
@@ -1,12 +1,8 @@
 package com.reftech.backend.anaservice.delegate;
 
-import com.reftech.backend.anaservice.api.AuthApiDelegate;
-import com.reftech.backend.anaservice.api.LoginUser200Response;
-import com.reftech.backend.anaservice.api.LoginUserRequest;
-import com.reftech.backend.anaservice.api.RegisterUserRequest;
+import com.reftech.backend.anaservice.api.*;
 import com.reftech.backend.anaservice.service.AuthService;
 import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Component;
 import org.springframework.web.server.ServerWebExchange;
@@ -34,13 +30,29 @@ public class AuthApiDelegateImpl implements AuthApiDelegate {
                 .map(ResponseEntity::ok);
     }
 
-
     @Override
     public Mono<ResponseEntity<Void>> logoutUser(String authorization,
                                                   String username,
                                                   ServerWebExchange exchange) {
         return authService
-                .logout(authorization,username)
+                .logout(authorization, username)
+                .map(ResponseEntity::ok);
+    }
+
+
+    @Override
+    public Mono<ResponseEntity<RefreshToken200Response>> refreshToken(Mono<RefreshTokenRequest> refreshTokenRequest,
+                                                                       ServerWebExchange exchange) {
+        return authService
+                .refreshToken(refreshTokenRequest)
+                .map(ResponseEntity::ok);
+    }
+
+    @Override
+    public Mono<ResponseEntity<GetUserDetails200Response>> getUserDetails(String id,
+                                                                           ServerWebExchange exchange) {
+          return authService
+                .getUserDetails(id)
                 .map(ResponseEntity::ok);
     }
 }
